src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <picklist>
            <picklistValues>
                <fullName>Printed Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banner Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Calling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MailDrop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DWH_Last_Sync__c</fullName>
        <label>DWH Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWH_Status__c</fullName>
        <label>DWH Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Monitor_Id__c</fullName>
        <externalId>true</externalId>
        <label>Campaign Monitor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Monitor__c</fullName>
        <formula>IF( wbsendit__Campaign_Monitor_Id__c == null,
HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;LinkCampaign?Id=&quot; + Id , &quot;Link to Campaign Monitor&quot;, &quot;_self&quot;),
HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;SendItReports?campaignId=&quot; + wbsendit__Campaign_Monitor_Id__c + &quot;&amp;reportId=1&quot;, &quot;View Report&quot;, &quot;_self&quot;) + &quot; &quot; + HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;Disconnect?Id=&quot; + Id, &quot;[Disconnect]&quot;, &quot;_self&quot;))</formula>
        <inlineHelpText>Connect this Salesforce Campaign to sent campaigns in Campaign Monitor. Use this to manage campaign reports from within Salesforce. Send It will add any members it finds in Campaign Monitor to this campaign.</inlineHelpText>
        <label>Campaign Monitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Email_Text_Version__c</fullName>
        <description>Text version of the email sent.</description>
        <inlineHelpText>Text version of the email sent.</inlineHelpText>
        <label>Email Text Version</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wbsendit__Email_Web_Version__c</fullName>
        <description>Web version of the email campaign.</description>
        <inlineHelpText>Web version of the email campaign.</inlineHelpText>
        <label>Email Web Version</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Bounced__c</fullName>
        <description>Number of bounced emails for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of bounced emails for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Bounced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Clicks__c</fullName>
        <description>Number of clicks for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of clicks for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Forwards__c</fullName>
        <description>Number of forwarded emails for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of forwarded emails for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Forwards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Likes__c</fullName>
        <description>Number of likes for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of likes for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Mentions__c</fullName>
        <description>Number of &quot;Mentions&quot; for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of &quot;Mentions&quot; for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Mentions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Opens__c</fullName>
        <description>Number of open emails for the associated Campaign Monitor campaign.</description>
        <inlineHelpText>Number of open emails for the associated Campaign Monitor campaign.</inlineHelpText>
        <label>Num Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Recipients__c</fullName>
        <description>Number of recipients for the associated Campaign Monitor campaign.</description>
        <inlineHelpText>Number of recipients for the associated Campaign Monitor campaign.</inlineHelpText>
        <label>Num Recipients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Spam_Complaints__c</fullName>
        <description>Number of Spam Complaints for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of Spam Complaints for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Spam Complaints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Unique_Opens__c</fullName>
        <description>Number of unique open emails for the associated Campaign Monitor campaign.</description>
        <inlineHelpText>Number of unique open emails for the associated Campaign Monitor campaign.</inlineHelpText>
        <label>Num Unique Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Unsubscribed__c</fullName>
        <description>Number of unsubscribes for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of unsubscribes for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Unsubscribed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__World_View_Email_Tracking__c</fullName>
        <description>World view of the email campaign tracking.</description>
        <inlineHelpText>World view of the email campaign tracking.</inlineHelpText>
        <label>World View Email Tracking</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>X0_All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>Campaign_Type__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>0 All Campaigns</label>
        <sharedTo>
            <group>Marketing_Hong_Kong</group>
            <group>Marketing_Philippines</group>
            <group>Marketing_Singapore</group>
            <group>Marketing_UK</group>
            <role>Group</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1_Asia_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>Campaign_Type__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Asia,Campaign.Hong_Kong,Campaign.Singapore,Campaign.Philippines</value>
        </filters>
        <label>1 Asia Campaigns</label>
        <sharedTo>
            <group>Marketing_Hong_Kong</group>
            <group>Marketing_Philippines</group>
            <group>Marketing_Singapore</group>
            <group>Marketing_UK</group>
            <role>Asia</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1_European_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>Campaign_Type__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Europe,Campaign.UK</value>
        </filters>
        <label>1 European Campaigns</label>
        <sharedTo>
            <group>Marketing_UK</group>
            <role>Europe</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2_Hong_Kong_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>Campaign_Type__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Hong_Kong</value>
        </filters>
        <label>2 Hong Kong Campaigns</label>
        <sharedTo>
            <group>Marketing_Hong_Kong</group>
            <group>Marketing_Philippines</group>
            <group>Marketing_Singapore</group>
            <group>Marketing_UK</group>
            <roleAndSubordinatesInternal>Hong_Kong</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2_Philippines_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>Campaign_Type__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Philippines</value>
        </filters>
        <label>2 Philippines Campaigns</label>
        <sharedTo>
            <group>Marketing_Hong_Kong</group>
            <group>Marketing_Philippines</group>
            <group>Marketing_Singapore</group>
            <group>Marketing_UK</group>
            <roleAndSubordinatesInternal>Philippines</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2_Singapore_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>Campaign_Type__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Singapore</value>
        </filters>
        <label>2 Singapore Campaigns</label>
        <sharedTo>
            <group>Marketing_Hong_Kong</group>
            <group>Marketing_Philippines</group>
            <group>Marketing_Singapore</group>
            <group>Marketing_UK</group>
            <roleAndSubordinatesInternal>Singapore</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2_UK_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>Campaign_Type__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.UK</value>
        </filters>
        <label>2 UK Campaigns</label>
        <sharedTo>
            <group>Marketing_UK</group>
            <roleAndSubordinatesInternal>UK</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Asia</fullName>
        <active>true</active>
        <description>Asia Marketing Campaign</description>
        <label>Asia</label>
    </recordTypes>
    <recordTypes>
        <fullName>Europe</fullName>
        <active>true</active>
        <description>European Marketing Campaign</description>
        <label>Europe</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hong_Kong</fullName>
        <active>true</active>
        <description>Campaigns for Hong Kong</description>
        <label>Hong Kong</label>
    </recordTypes>
    <recordTypes>
        <fullName>Philippines</fullName>
        <active>true</active>
        <description>Campaigns for Philippines</description>
        <label>Philippines</label>
    </recordTypes>
    <recordTypes>
        <fullName>Singapore</fullName>
        <active>true</active>
        <description>Campaigns for Singapore</description>
        <label>Singapore</label>
    </recordTypes>
    <recordTypes>
        <fullName>UK</fullName>
        <active>true</active>
        <description>Campaigns for UK</description>
        <label>UK</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Start_Date_Greater_Than_Today</fullName>
        <active>true</active>
        <errorConditionFormula>AND(StartDate &lt;  TODAY(),  ISNEW() )</errorConditionFormula>
        <errorDisplayField>StartDate</errorDisplayField>
        <errorMessage>Start Date Cannot Be Less Than Current Date</errorMessage>
    </validationRules>
</CustomObject>